E_EM/SDK/include/MVGigE.h

typedef void* HANDLE;
	/*! 
	 *  \brief	查找连接到计算机上的相机
	 *  \retval MVST_SUCCESS			: 成功
	 */
	MVGIGE_API MVSTATUS_CODES __stdcall MVUpdateCameraList();
	/*! 
	 *  \brief	获取连接到计算机上的相机的数量
	 *  \param [out]	pNumCams	相机数量
	 *  \retval MVST_SUCCESS			: 成功
	 */
	MVGIGE_API MVSTATUS_CODES __stdcall MVGetNumOfCameras(int* pNumCams);
	/*! 
	 *  \brief	打开第idx个相机
	 *  \param [in]	idx	idx从0开始，按照相机的IP地址排序，地址小的排在前面。
	 *  \param [out]	hCam 如果成功,返回的相机句柄
	 *  \retval MVST_INVALID_PARAMETER : idx取值不对
	 *			MVST_ACCESS_DENIED		: 相机无法访问，可能正被别的软件控制
	 *			MVST_ERROR				: 其他错误
	 *			MVST_SUCCESS			: 成功
	 */
	MVGIGE_API MVSTATUS_CODES __stdcall MVOpenCamByIndex(unsigned char idx, HANDLE* hCam);
	/*! 
	 *  \brief	关闭相机。断开和相机的连接。
	 *  \param [in]	hCam 相机的句柄
	 *  \retval MVST_SUCCESS			: 成功
	 */
	MVGIGE_API MVSTATUS_CODES __stdcall MVCloseCam(HANDLE hCam);
	/*!
	 * \brief	读取图像宽度
	 * \param [in]	hCam		相机句柄
	 * \param [out]	pWidth	图像宽度[像素]
	 * \retval  	MVST_SUCCESS			: 成功
	 */
	MVGIGE_API MVSTATUS_CODES __stdcall MVGetWidth(HANDLE hCam, int* pWidth);
	/*!
	 * \brief	读取图像高度
	 * \param [in]	hCam		相机句柄
	 * \param [out]	 pHeight	图像高度[像素]
	 * \retval  	MVST_SUCCESS			: 成功
	 */
	MVGIGE_API MVSTATUS_CODES __stdcall MVGetHeight(HANDLE hCam, int* pHeight);
	

	/*!
	 * \brief    读取图像的像素格式
	 * \param [in]	hCam		相机句柄
	 * \param [out]	pPixelFormat
	 * \retval  	MVST_SUCCESS			: 成功
	 */
	MVGIGE_API MVSTATUS_CODES __stdcall MVGetPixelFormat(HANDLE hCam, MV_PixelFormatEnums* pPixelFormat);
	/*!
	 * \brief    读取当前增益值
	 * \param [in]	hCam	相机句柄
	 * \param [out]	 pGain
	 *  \retval MVST_SUCCESS			: 成功
	 */
	MVGIGE_API MVSTATUS_CODES __stdcall MVGetGain(HANDLE hCam, double* pGain);
	/*!
	 * \brief    读取增益可以设置的范围
	 * \param [in]	hCam	相机句柄
	 * \param [out]	 pGainMin	最小值
	 * \param [out]	 pGainMax	最大值
	 *  \retval MVST_SUCCESS			: 成功
	 */
	MVGIGE_API MVSTATUS_CODES __stdcall MVGetGainRange(HANDLE hCam, double* pGainMin, double* pGainMax);
	

	/*!
	 * \brief    设置增益
	 * \param [in]	hCam	相机句柄
	 * \param [in]	 fGain	增益
	 *  \retval MVST_SUCCESS			: 成功
	 */
	MVGIGE_API MVSTATUS_CODES __stdcall MVSetGain(HANDLE hCam, double fGain);
	/*!
	 * \brief    读取当前白平衡系数
	 * \param [in]	hCam		相机句柄
	 * \param [out]	 pRed	红色平衡系数
	 * \param [out]	 pGreen 绿色平衡系数
	 * \param [out]	 pBlue	蓝色平衡系数
	 *  \retval MVST_SUCCESS			: 成功
	 */
	MVGIGE_API MVSTATUS_CODES __stdcall MVGetWhiteBalance(HANDLE hCam, double* pRed, double* pGreen, double* pBlue);
	/*!
	 * \brief	读取白平衡设置的范围
	 * \param [in]	hCam		相机句柄
	 * \param [out]	 pMin	系数最小值
	 * \param [out]	 pMax	系数最大值
	 *  \retval MVST_SUCCESS			: 成功
	 */
	MVGIGE_API MVSTATUS_CODES __stdcall MVGetWhiteBalanceRange(HANDLE hCam, double* pMin, double* pMax);
	/*!
	 * \brief    设置白平衡系数
	 * \param [in]	hCam		相机句柄
	 * \param [in]	 fRed		红色平衡系数
	 * \param [in]	 fGreen	绿色平衡系数
	 * \param [in]	 fBlue	蓝色平衡系数
	 *  \retval MVST_SUCCESS			: 成功
	 */
	MVGIGE_API MVSTATUS_CODES __stdcall MVSetWhiteBalance(HANDLE hCam, double fRed, double fGreen, double fBlue);
	/*! 
	 *  \brief	读取当前曝光时间
	 *  \param [in]	hCam
	 *  \param [in]	pExposuretime	单位us
	 *  \retval MVST_SUCCESS			: 成功
	 */
	MVGIGE_API MVSTATUS_CODES __stdcall MVGetExposureTime(HANDLE hCam, double* pExposuretime);
	/*!
	 * \brief  读取曝光时间的设置范围  
	 * \param [in]	hCam		相机句柄
	 * \param [out]	 pExpMin	最短曝光时间 单位为us
	 * \param [out]	 pExpMax	最长曝光时间 单位为us
	 *  \retval MVST_SUCCESS			: 成功
	 */
	MVGIGE_API MVSTATUS_CODES __stdcall MVGetExposureTimeRange(HANDLE hCam, double* pExpMin, double* pExpMax);
	/*!
	 * \brief	设置曝光时间
	 * \param [in]	hCam		相机句柄
	 * \param [in]	 nExp_us 曝光时间 单位为us
	 *  \retval MVST_SUCCESS			: 成功
	 */
	MVGIGE_API MVSTATUS_CODES __stdcall MVSetExposureTime(HANDLE hCam,double nExp_us);
	/*!
	 * \brief	读取帧率可设置的范围
	 * \param [in]	hCam		相机句柄
	 * \param [out]	 pFpsMin 最低帧率
	 * \param [out]	 pFpsMax 最高帧率	
	 *  \retval MVST_SUCCESS			: 成功
	 */
	MVGIGE_API MVSTATUS_CODES __stdcall MVGetFrameRateRange(HANDLE hCam, double* pFpsMin, double* pFpsMax);
	/*!
	 * \brief	读取当前帧率   
	 * \param [in]	hCam		相机句柄
	 * \param [out]	 fFPS	帧率 帧/秒
	 *  \retval MVST_SUCCESS			: 成功
	 */
	MVGIGE_API MVSTATUS_CODES __stdcall MVGetFrameRate(HANDLE hCam, double* fFPS);
	/*!
	 * \brief    设置帧率
	 * \param [in]	hCam		相机句柄
	 * \param [in]	 fps	帧率 帧/秒
	 *  \retval MVST_SUCCESS			: 成功
	 */
	MVGIGE_API MVSTATUS_CODES __stdcall MVSetFrameRate(HANDLE hCam, double fps);
	/*!
	 * \brief    读取触发模式
	 * \param [in]	hCam		相机句柄
	 * \param [out]	pMode	触发模式  TriggerMode_Off,TriggerMode_On
	 *  \retval MVST_SUCCESS			: 成功
	 */
	MVGIGE_API MVSTATUS_CODES __stdcall MVGetTriggerMode(HANDLE hCam, TriggerModeEnums* pMode);
	/*! 
	 *  \brief	设置触发模式
	 * \param [in]	hCam		相机句柄
	 *  \param [in]	mode	触发模式
		TriggerMode_Off：相机工作在连续采集模式，
		TriggerMode_On:相机工作在触发模式，需要有外触发信号或软触发指令才拍摄
	 *  \retval MVST_SUCCESS			: 成功
	 */
	MVGIGE_API MVSTATUS_CODES __stdcall MVSetTriggerMode(HANDLE hCam, TriggerModeEnums mode);
	/*!
	 * \brief    读取触发源
	 * \param [in]	hCam		相机句柄
	 * \param [out]	pSource	触发源，软触发或外触发
	 *  \retval MVST_SUCCESS			: 成功
	 */
	MVGIGE_API MVSTATUS_CODES __stdcall MVGetTriggerSource(HANDLE hCam, TriggerSourceEnums* pSource);
	/*! 
	 *  \brief	设置触发源
	 * \param [in]	hCam		相机句柄
	 *  \param [in]	source 触发源
					TriggerSource_Software：通过\c MVTriggerSoftware()函数触发。
					TriggerSource_Line1：通过连接的触发线触发。
	 *  \retval MVST_SUCCESS			: 成功
	 */
	MVGIGE_API MVSTATUS_CODES __stdcall MVSetTriggerSource(HANDLE hCam, TriggerSourceEnums source);
	/*!
	 * \brief    读取触发极性
	 * \param [in]	hCam		相机句柄
	 * \param [out]	pAct
					TriggerActivation_RisingEdge: 上升沿触发
					TriggerActivation_FallingEdge: 下降沿触发
	 *  \retval MVST_SUCCESS			: 成功
	 */
	MVGIGE_API MVSTATUS_CODES __stdcall MVGetTriggerActivation(HANDLE hCam, TriggerActivationEnums* pAct);
	/*! 
	 *  \brief	当使用触发线触发时,设置是上升沿触发还是下降沿触发
	 *  \param [in]	hCam
	 *  \param [in]	act 上升沿或下降沿
					TriggerActivation_RisingEdge: 上升沿触发
					TriggerActivation_FallingEdge: 下降沿触发
	 *  \retval MVST_SUCCESS			: 成功
	 */
	MVGIGE_API MVSTATUS_CODES __stdcall MVSetTriggerActivation(HANDLE hCam, TriggerActivationEnums act);
	/*!
	 * \brief	读取触发延时
	 * \param [in]	hCam		相机句柄
	 * \param [out]	pDelay_us	触发延时,单位us
	 *  \retval MVST_SUCCESS			: 成功
	 */
	MVGIGE_API MVSTATUS_CODES __stdcall MVGetTriggerDelay(HANDLE hCam, uint32_t* pDelay_us);
	/*!
	 * \brief    读取触发延时范围
	 * \param [in]	hCam		相机句柄
	 * \param [out]	pMin	触发延时最小值,单位us	
	 * \param [out]	pMax 触发延时最大值,单位us	
	 *  \retval MVST_SUCCESS			: 成功
	 */
	MVGIGE_API MVSTATUS_CODES __stdcall MVGetTriggerDelayRange(HANDLE hCam, uint32_t* pMin, uint32_t* pMax);
	/*! 
	 *  \brief	设置相机接到触发信号后延迟多少微秒后再开始曝光。
	 *  \param [in]	hCam		相机句柄
	 *  \param [in]	nDelay_us
	 *  \retval MVST_SUCCESS			: 成功
	 */
	MVGIGE_API MVSTATUS_CODES __stdcall MVSetTriggerDelay(HANDLE hCam, uint32_t nDelay_us);
	/*! 
	 *  \brief	发出软件触发指令
	 *  \param [in]	hCam		相机句柄
	 *  \retval MVST_SUCCESS			: 成功
	 */
	MVGIGE_API MVSTATUS_CODES __stdcall MVTriggerSoftware(HANDLE hCam);
	/*!
	 * \brief	读取闪光同步信号源
	 * \param [in]	hCam		相机句柄
	 * \param [out]	pSource	闪光同步信号源
	 *  \retval MVST_SUCCESS			: 成功
	 */
	MVGIGE_API MVSTATUS_CODES __stdcall MVGetStrobeSource(HANDLE hCam, LineSourceEnums* pSource);
	/*! 
	 *  \brief	闪光同步信号源
	 *  \param [in]	hCam
	 *  \param [in]	source
					LineSource_Off：关闭闪光同步
					LineSource_ExposureActive：曝光的同时闪光
					LineSource_Timer1Active：由定时器控制
					LineSource_UserOutput0：由用户通过指令控制
	 *  \retval MVST_SUCCESS			: 成功
	 */
	MVGIGE_API MVSTATUS_CODES __stdcall MVSetStrobeSource(HANDLE hCam, LineSourceEnums source);
	/*!
	 * \brief	读取闪光同步是否反转
	 * \param [in]	hCam		相机句柄
	 * \param [out]	pInvert
	 *  \retval MVST_SUCCESS			: 成功
	 */
	MVGIGE_API MVSTATUS_CODES __stdcall MVGetStrobeInvert(HANDLE hCam, bool* pInvert);
	/*! 
	 *  \brief	闪光同步是否反转，即闪光同步有效时输出高电平还是低电平。
	 *  \param [in]	hCam		相机句柄
	 *  \param [in]	bInvert
	 *  \retval MVST_SUCCESS			: 成功
	 */
	MVGIGE_API MVSTATUS_CODES __stdcall MVSetStrobeInvert(HANDLE hCam, bool bInvert);
	/*!
	 * \brief	读取用户设置的闪光同步
	 * \param [in]	hCam		相机句柄
	 * \param [out]	pSet
	 *  \retval MVST_SUCCESS			: 成功
	 */
	MVGIGE_API MVSTATUS_CODES __stdcall MVGetUserOutputValue0(HANDLE hCam, bool* pSet);
	/*! 
	 *  \brief	当闪光同步源选为UserOutput时
				主机可以通过MVSetUserOutputValue0来控制闪光同步输出高电平或低电平。
	 *  \param [in]	hCam		相机句柄
	 *  \param [in]	bSet 设置电平
	 *  \retval MVST_SUCCESS			: 成功
	 */
	MVGIGE_API MVSTATUS_CODES __stdcall MVSetUserOutputValue0(HANDLE hCam, bool bSet);
	/*!
	 *  \brief 设置心跳超时时间
	 *  \param [in]	hCam	相机句柄
	 *  \param [in]	 nTimeOut	心跳超时时间 单位ms
	 *  \retval  	MVST_SUCCESS			: 成功
	 *  \note 应用程序打开相机后，正常情况下会去关闭相机。但有时程序会意外中断，没有正常关闭相机。
	 *			这种情况下相机就无法再次打开了（相机认为还在被原来软件控制着）。 
	 *			因此设计了heartbeat，应用程序无论是否在采集图像，每隔一定时间(一般是1000ms)都要去访问一下相机。
	 *			当超过HeartbeatTimeout时间没有来自应用程序的访问，相机就认为应用程序中断了，会自动关闭原有连接，
	 *			以迎接新的连接。
	 *			定时访问相机的操作在SDK内部已经实现。编程时无需再次实现。
	 *			在设置断点调试程序时，可以将nTimeOut设置长一些，否则相机会自动关闭连接。
	 *			Release状态下设置短一些(3000ms),否则应用程序意外退出时，相机会长时间无法重新打开。
	 */
	MVGIGE_API MVSTATUS_CODES __stdcall MVSetHeartbeatTimeout(HANDLE hCam, unsigned long nTimeOut);//unit ms
	/*!
	 * \brief	读取网络数据包大小
	 * \param [in]	hCam		相机句柄
	 * \param [out]	pPacketSize 数据包大小
	 *  \retval MVST_SUCCESS			: 成功
	 */
	MVGIGE_API MVSTATUS_CODES __stdcall MVGetPacketSize(HANDLE hCam, unsigned int* pPacketSize);
	/*!
	 * \brief    读取网络数据包大小的范围。
	 * \param [in]	hCam			相机句柄
	 * \param [out]	pMin	网络数据包最小值	
	 * \param [out]	pMax 网络数据包最大值	
	 *  \retval MVST_SUCCESS			: 成功
	 */
	MVGIGE_API MVSTATUS_CODES __stdcall MVGetPacketSizeRange(HANDLE hCam, unsigned int* pMin, unsigned int* pMax);
	/*! 
	 *  \brief	设置网络数据包的大小。
	 *  \param [in]	hCam			相机句柄
	 *  \param [in]	nPacketSize 网络数据包大小(单位:字节)。该大小必须小于网卡能够支持的最大巨型帧(Jumbo Frame)。
	 *  \retval MVST_SUCCESS			: 成功
	 */
	MVGIGE_API MVSTATUS_CODES __stdcall MVSetPacketSize(HANDLE hCam, unsigned int nPacketSize);
	/*!
	 * \brief	读取网络数据包间隔。
	 * \param [in]	hCam				相机句柄
	 * \param [out]	pDelay_us 数据包间隔时间，单位us
	 *  \retval MVST_SUCCESS				: 成功
	 */
	MVGIGE_API MVSTATUS_CODES __stdcall MVGetPacketDelay(HANDLE hCam, unsigned int* pDelay_us);
	/*!
	 * \brief    读取网络数据包间隔范围
	 * \param [in]	hCam			相机句柄
	 * \param [out]	pMin	数据包间隔时间最小值，单位us	
	 * \param [out]	pMax 数据包间隔时间最大值，单位us	
	 *  \retval MVST_SUCCESS			: 成功
	 */
	MVGIGE_API MVSTATUS_CODES __stdcall MVGetPacketDelayRange(HANDLE hCam, unsigned int* pMin, unsigned int* pMax);
	/*!
	 *  \brief 采集一帧图像。
	 *  \param [in]	hCam	相机句柄
	 *  \param [out]	hImage	图像句柄。保存采集到的图像。
	 *  \param [in]	 nWaitMs	等待多长时间，单位ms
	 *  \retval  	MVST_SUCCESS			: 成功
	 */
	MVGIGE_API MVSTATUS_CODES __stdcall MVSingleGrab(HANDLE hCam, HANDLE hImage, unsigned long nWaitMs);